--- a/gloLessons/index.html
+++ b/gloLessons/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="#1"><img class="up" src="/uup.png" alt=""></a>
+    <a href="#1"><img class="up" src="https://www.stellait.ru/up.png" alt=""></a>
 <div class="text">
     <h1 id="1">Властелин Колец</h1>
     <p>
