--- a/gloLessons/index.html
+++ b/gloLessons/index.html
@@ -9,47 +9,34 @@
 </head>
 <body>
     <a href="#1"><img class="up" src="https://www.stellait.ru/up.png" alt=""></a>
+    <div class="navigation">
+        <ul>
+            <li><a href="#2">Глава 1 Минас Тирит</a>
+            </li>
+        </ul>
+        <ul>
+            <li><a href="#3">Глава 2 Выбор Арагорна</a>
+            </li>
+        </ul>
+        <ul>
+            <li><a href="#4">Глава 3 Рохан собирает войска</a>
+            </li>
+        </ul>
+        <ul>
+            <li><a href="#5">Глава 4 Осада Города</a>
+            </li>
+        </ul>
+        <ul>
+            <li><a href="#6">Глава 5 Поход Теодена</a>
+            </li>
+        </ul>
+    </div>
 <div class="text">
     <h1 id="1">Властелин Колец</h1>
     <p>
     Трилогия «Властелин Колец» бесспорно возглавляет список «культовых» книг XX века. Ее автор, Дж.Р.Р.Толкин, профессор Оксфордского университета, специалист по древнему и средневековому английскому языку, создал удивительный мир - Среднеземье, который вот уже без малого пятьдесят лет неодолимо влечет к себе миллионы читателей. Там, в Среднеземье, в стране, управляемой советом волшебников, где в серебряных лесах поют эльфы, в глубоких пещерах добывают драгоценный мифрил гномы, а бескорыстие добрых чародеев постоянно подвергается испытаниям, - разгорается битва Света и Тьмы, исход которой, по воле провидения, зависит от самых маленьких жителей - Хоббитов. История Кольца Всевластья послужила основой множеству телевизионных и театральных постановок, мультфильмов, компьютерных игр и комиксов. Тысячи людей по всему миру ежегодно собираются для участия в ролевых играх, основанных на сюжетах, взятых у Толкина. Эпопею Толкина, как миф, можно интерпретировать по - разному - и как повествование о бывших или будущих событиях, и как притчу, и как аллегорию, и как историю духовного восхождения, и как фантастику, - все толкования будут верны, но ни одно не станет полным. «Возвращение Короля» – третий том трилогии. Здесь рассказывается о последней битве, о том, как Хранитель выполнил свою миссию и как погибло царство Саурона.
     </p>
     <h2>Книга Пятая</h2>
-    <ul>
-        <li><a href="#2">Глава 1 Минас Тирит</a>
-            <ul>
-                <li>Заметка 1</li>
-            </ul>
-        </li>
-    </ul>
-    <ul>
-        <li><a href="#3">Глава 2 Выбор Арагорна</a>
-            <ul>
-                <li>Заметка 2</li>
-            </ul>
-        </li>
-    </ul>
-    <ul>
-        <li><a href="#4">Глава 3 Рохан собирает войска</a>
-            <ul>
-                <li>Заметка 3</li>
-            </ul>
-        </li>
-    </ul>
-    <ul>
-        <li><a href="#5">Глава 4 Осада Города</a>
-            <ul>
-                <li>Заметка 4</li>
-            </ul>
-        </li>
-    </ul>
-    <ul>
-        <li><a href="#6">Глава 5 Поход Теодена</a>
-            <ul>
-                <li>Заметка 5</li>
-            </ul>
-        </li>
-    </ul>
     <h2 id="2">Минас Тирит</h2>
     <p>Пиппин выглянул из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над головой звездное небо. Он пытался вспомнить, что с ним и где он, но мысли путались, отдельные картины сменяли друг друга.
         Помнится, они мчались без остановок, летели все вперед и вперед, и там, впереди, вставал на рассвете золотистый мягкий блеск, и был город, затопленный тишиной, и гулкая пустота большого дворца на холме. Они ворвались под его своды в тот самый момент, когда вверху пронеслась огромная крылатая тень, и ужас выбелил лица людей вокруг. Пиппин вспомнил, как и его сердце сжала ледяная рука. Но рядом был Гэндальф, и ужас ушел, осталась только усталость. Пиппин спал, но сон был тревожным, в нем ходили и разговаривали незнакомые люди, что-то приказывал Гэндальф. И дальше, без перехода, снова бешеная скачка сквозь ночь. С тех пор как он заглянул в Палантир, прошло двое, нет, трое суток. Палантир! Это было ужасно! С этим воспоминанием он проснулся окончательно. Вокруг шумел и бормотал все тот же ветер.
